--- a/.github/workflows/build-windows-full.yml
+++ b/.github/workflows/build-windows-full.yml
@@ -47,6 +47,9 @@ jobs:
       - uses: actions/setup-dotnet@v5
         with:
           dotnet-version: '10.0.x'
+
+      - run: dotnet --info
+
       - uses: microsoft/setup-msbuild@v2
       - name: Build
         run: |
