--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -52,6 +52,8 @@ jobs:
       - uses: actions/setup-dotnet@v5
         with:
           dotnet-version: '10.0.x'
+      - name: Install .NET iOS Workload
+        run: dotnet workload install ios
       - uses: microsoft/setup-msbuild@v2
       - name: Build
         run: |
