--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -52,6 +52,8 @@ jobs:
       - uses: actions/setup-dotnet@v5
         with:
           dotnet-version: '10.0.x'
+      - name: Install Android Workload
+        run: dotnet workload install android
       - uses: microsoft/setup-msbuild@v2
       - name: Build
         run: |
