--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -54,15 +54,31 @@ jobs:
           dotnet-version: '10.0.x'
       - name: Install Android Workload
         run: dotnet workload install android
-      - name: Setup Android NDK
+      - name: Setup Android
         uses: android-actions/setup-android@v3
         with:
-          ndk-version: 21.4.7075529
+          cmdline-tools-version: 12266719
+          accept-android-sdk-licenses: true
+          log-accepted-android-sdk-licenses: true
+          packages: tools platform-tools ndk;21.4.7075529
       - name: Configure NDK Environment
+        shell: pwsh
         run: |
-          echo "ANDROID_NDK_ROOT=$env:ANDROID_NDK_HOME" >> $env:GITHUB_ENV
-          echo "ANDROID_NDK_HOME=$env:ANDROID_NDK_HOME" >> $env:GITHUB_ENV
+          $ndkPath = "$env:ANDROID_SDK_ROOT\ndk\21.4.7075529"
+          echo "ANDROID_NDK_ROOT=$ndkPath" >> $env:GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$ndkPath" >> $env:GITHUB_ENV
+          echo "Using NDK at: $ndkPath"
       - uses: microsoft/setup-msbuild@v2
+      - name: Debug NDK Configuration
+        shell: pwsh
+        run: |
+          Write-Host "ANDROID_SDK_ROOT: $env:ANDROID_SDK_ROOT"
+          Write-Host "ANDROID_NDK_ROOT: $env:ANDROID_NDK_ROOT"
+          Write-Host "ANDROID_NDK_HOME: $env:ANDROID_NDK_HOME"
+          Write-Host "NDK Path exists: $(Test-Path $env:ANDROID_NDK_ROOT)"
+          if (Test-Path "$env:ANDROID_NDK_ROOT\source.properties") {
+            Get-Content "$env:ANDROID_NDK_ROOT\source.properties"
+          }
       - name: Build
         run: |
           msbuild build\Stride.Android.sln `
