fix: android-sdk path explicitly added

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -81,10 +81,12 @@ jobs:
           }
       - name: Build
         run: |
+          $ndkPath = "C:\Android\android-sdk\ndk\21.4.7075529"
           msbuild build\Stride.Android.sln `
             -restore -m:1 -nr:false `
             -v:m -p:WarningLevel=0 `
             -p:Configuration=${{ github.event.inputs.build-type || inputs.build-type || 'Debug' }} `
             -p:StridePlatforms=Android `
             -p:StrideSkipUnitTests=true `
-            -p:StrideSkipAutoPack=true
+            -p:StrideSkipAutoPack=true `
+            -p:_AndroidNdkDirectory="$ndkPath"
