--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -52,8 +52,8 @@ jobs:
       - uses: actions/setup-dotnet@v5
         with:
           dotnet-version: '10.0.x'
-      - name: Install Android Workload
-        run: dotnet workload install android
+      # - name: Install Android Workload
+      #   run: dotnet workload install android
       - name: Remove Conflicting NDK
         shell: pwsh
         run: |
