--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install Build Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libbsd-dev clang
+          sudo apt-get install -y libbsd-dev clang llvm
       - name: Patch NativePath for Linux
         run: |
           # Make strlcat_chk and strlcpy_chk non-fatal on Linux
