--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -71,7 +71,7 @@ jobs:
             -p:Configuration=${{ github.event.inputs.build-type || inputs.build-type }} \
             -p:StridePlatforms=Linux \
             -p:StrideGraphicsApis=OpenGL \
-            -p:RestoreAdditionalProjectSources="./bin/packages;$HOME/.local/share/Stride/NuGetDev"
+            -p:RestoreAdditionalProjectSources=./bin/packages:$HOME/.local/share/Stride/NuGetDev
       - name: Inspect NuGet Local Sources (always)
         if: always()
         run: |
