--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -60,7 +60,7 @@ jobs:
           LOCAL_PACKAGES_PATH="$(pwd)/bin/packages"
 
           # Only add the local source (not the non-existent global one)
-          dotnet nuget add source "$LOCAL_PACKAGES_PATH" --name "StrideDev Local"
+          # dotnet nuget add source "$LOCAL_PACKAGES_PATH" --name "StrideDev Local"
 
           # List configured sources
           echo "==== Configured NuGet Sources ===="
@@ -78,7 +78,6 @@ jobs:
             -p:StrideGraphicsApis=OpenGL \
             -p:RestoreAdditionalProjectSources=$LOCAL_PACKAGES_PATH \
             -p:RestoreIgnoreFailedSources=true \
-            -p:NuGetVerifySignatures=false
       - name: Inspect NuGet Local Sources (always)
         if: always()
         run: |
